--- a/angular.json
+++ b/angular.json
@@ -68,7 +68,7 @@
             "tsConfig": "apps/site/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["apps/site/src/favicon.ico", "apps/site/src/assets"],
-            "styles": ["apps/site/src/styles.scss"],
+            "styles": ["./node_modules/@angular/material/prebuilt-themes/purple-green.css", "apps/site/src/styles.scss"],
             "scripts": []
           },
           "configurations": {
