--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/platform-browser": "^12.0.0",
     "@angular/platform-browser-dynamic": "^12.0.0",
     "@angular/router": "^12.0.0",
+    "@ngneat/tailwind": "^7.0.3",
     "@nrwl/angular": "12.4.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -60,6 +61,10 @@
     "@nrwl/linter": "12.4.0",
     "@nrwl/tao": "12.4.0",
     "@nrwl/workspace": "12.4.0",
+    "@tailwindcss/aspect-ratio": "0.2.1",
+    "@tailwindcss/forms": "0.3.3",
+    "@tailwindcss/line-clamp": "0.2.1",
+    "@tailwindcss/typography": "0.4.1",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "4.19.0",
@@ -72,6 +77,7 @@
     "jest": "27.0.3",
     "jest-preset-angular": "9.0.3",
     "prettier": "2.2.1",
+    "tailwindcss": "2.2.4",
     "ts-jest": "27.0.3",
     "ts-node": "~9.1.1",
     "typescript": "~4.2.4"
