Set up actor explicitly

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,5 +35,5 @@ jobs:
           git config --local user.email '<>'
           git add .
           git commit -m 'Add static files'
-          git remote add origin https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git >/dev/null 2>&1
+          git remote add origin https://${{ github.actor}}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git >/dev/null 2>&1
           git push --force origin HEAD:static >/dev/null 2>&1
