--- a/angular.json
+++ b/angular.json
@@ -69,7 +69,7 @@
             "inlineStyleLanguage": "scss",
             "assets": ["apps/site/src/favicon.ico", "apps/site/src/assets"],
             "styles": [
-              // "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "apps/site/src/styles.scss"
             ],
             "scripts": []
